# Navigating-Diffrential-ESP32-Robot-Approcah-to-Target-Point-ROS2

./: README.md
aktual/: README.md  package.xml  setup.cfg  setup.py
aktual/aktual/: communication (copy).py  communication.py  detection (3rd copy).py  detection (another copy).py  detection (copy).py  detection-target-merah.py  detection.py  diff_drive.py  get_robot_pos_service.py  get_target_pos_service.py  strategy (copy).py  strategy.py
aktual/config/: robot.yaml
aktual/launch/: tcp_bridge_launch (copy).py  tcp_bridge_launch.py
aktual/rviz/: rviz_config.rviz
aktual/urdf/: model_robot (another copy).urdf  model_robot (copy).urdf  model_robot.sdf  model_robot.urdf.xml  model_robot_gazebo.urdf
service_pos/: CMakeLists.txt  package.xml
service_pos/src/: get_positions_server.cpp
service_pos/srv/: GetPositions.srv
simulasi/: README.md  package.xml  setup.cfg  setup.py
simulasi/launch/: launch_simulasi.launch.py
simulasi/simulasi/: control_robot.py  gazebo_vision.py  gazebo_vision_test.py
