<?xml version="1.0"?>
<package format="3">
  <name>simulasi</name>
  <version>0.0.0</version>
  <description>Launch system for simulation and vision/control nodes</description>
  <maintainer email="senta@todo.todo">senta</maintainer>
  <license>MIT</license>

  <!-- Build & Run Dependencies -->
  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>

  <!-- Optional test dependencies -->
  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>

